Try to fix strange height problem on mobile

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	max-height: 100% !important;
 }
 
 body {
